--- a/style.css
+++ b/style.css
@@ -30,13 +30,102 @@ a{
 	cursor: pointer;
 }
 
-.parallax{
+.parallax1{
 	background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url("img/bg-1.jpg");
 }
+
+.parallax2{
+	background-attachment: fixed;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    background-size: 100% 600px;
+    background-image: url("img/bg-2.jpg");
+    height:313px;
+    position: relative;
+}
+
+.parallax2>div {
+	padding: 65 15 80 15;
+	position: relative;
+	top:0;
+}
+
+.parallax2>div>h2{
+	font-size: 34px;
+	color:white;
+	text-align: center;
+	text-shadow:2px 2px #999;
+	display: block;
+	font-weight: 500;
+	margin-bottom: 0px;
+}
+
+.parallax2>div>p{
+	margin-top:0px;
+	font-size: 18px;
+	line-height: 24px;
+	color:white;
+	text-align: center;
+	text-shadow:2px 2px #888;
+	font-weight: 500;
+}
+
+
+.parallax3{
+	background-attachment: fixed;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("img/bg-3.jpg");
+    height:100vh;
+    position: relative;
+}
+
+.parallax3>div {
+	padding: 65 15 80 15;
+	position: relative;
+	top:0;
+	flex-basis: 100%;
+}
+
+.parallax3 > div >h2{
+	font-size: 34px;
+	color:white;
+	text-align: center;
+	text-shadow:2px 2px black;
+	display: block;
+	font-weight: 500;
+	margin-bottom: 0px;
+}
+
+.parallax3 > div > div.content_holder_outer {
+	opacity: .5;
+}
+
+.parallax3 > div > div > div.content_holder_inner{
+	border-radius: 5px;
+}
+
+.parallax3>div>p{
+	margin-top:0px;
+	font-size: 18px;
+	line-height: 24px;
+	color:white;
+	text-align: center;
+	text-shadow:2px 2px #888;
+	font-weight: 500;
+}
+
+.full {
+	width:100%;
+
+}
+
+
 
 .banner{
     margin-bottom: 70px;
@@ -168,6 +257,15 @@ input:checked~ul{
 .col_1{
 	margin: 0 15 30 15;
 	max-width: 720px;
+}
+
+.col_1_medium{
+	margin: 0 15 30 15;
+	max-width: 720px;
+}
+
+.col_2_s2{
+	max-width: 300px;
 }
 
 .flex{
@@ -380,6 +478,9 @@ input:checked~ul{
 	}
 	.col_1{
 		max-width: 940px;
+	}
+	.col_1_medium{
+		max-width: 750px;
 	}
 }
 
