--- a/style.css
+++ b/style.css
@@ -50,9 +50,9 @@ a{
 }
 
 .parallax2>div {
-	padding: 65 15 80 15;
+	padding: 65px 15px 80px 15px;
 	position: relative;
-	top:0;
+	top:0px;
 }
 
 .parallax2>div>h2{
@@ -61,7 +61,7 @@ a{
 	text-align: center;
 	text-shadow:2px 2px #999;
 	display: block;
-	font-weight: 500;
+	font-weight: 500px;
 	margin-bottom: 0px;
 }
 
@@ -72,7 +72,7 @@ a{
 	color:white;
 	text-align: center;
 	text-shadow:2px 2px #888;
-	font-weight: 500;
+	font-weight: 500px;
 }
 
 
@@ -88,7 +88,7 @@ a{
 
 .parallax3>div{
 	position: relative;
-	top:0;
+	top:0px;
 	flex-basis: 100%;
 }
 
@@ -98,7 +98,7 @@ a{
 	text-align: center;
 	text-shadow:2px 2px black;
 	display: block;
-	font-weight: 500;
+	font-weight: 500px;
 	margin-bottom: 0px;
 }
 
@@ -107,13 +107,13 @@ a{
 }
 
 .parallax3 > * >.content_holder_inner{
-	border-radius: 5px;
+	border-radius: 5px ;
 }
 
 .parallax3>div>div>p{
-	font-weight: 500;
+	font-weight: 500px;
 	font-size: 16px;
-	padding:15px 0;
+	padding:15px  0px;
 }
 
 .full {
@@ -126,9 +126,9 @@ a{
 }
 
 .input {
-	margin-bottom: 15px;
-	border-radius: 5px;
-	padding:5px 5px 5px 10px;
+	margin-bottom: 15px ;
+	border-radius: 5px ;
+	padding:5px  5px  5px  10px;
 	font-size: 16px;
 	border:none;
 }
@@ -140,7 +140,7 @@ textarea.input {
 .black_button {
 	background:black;
 	border: 1px solid white;
-	padding: 10 30 10 30;
+	padding: 10px 30px 10px 30px;
 	color:white;
 }
 
@@ -172,9 +172,8 @@ textarea.input {
 @media (min-width:768px){
 	.parallax1{
 		width:auto;
-		height:120%;
 		max-width:100%;
-		margin:0;
+		margin:0px;
 		background-size: 100% calc(1800/10.52)vw;
 	}
 }
@@ -205,16 +204,16 @@ textarea.input {
 		text-align: center;
 		text-decoration: none;
 		display: inline-block;
-		text-shadow: -.25px 0 #333, 0 .25px #333, .25px 0 #333, 0 -.25px #333;
+		text-shadow: -.25px  0px #333, 0px .25px  #333, .25px  0px #333, 0px -.25px  #333;
 		cursor:pointer;
 		font-size:20px;
-		font-weight:100;
-		padding: 5px 9px 5px 9px;
+		font-weight:100px;
+		padding: 5px  9px 5px  9px;
 		margin: 8px;
 		text-align:center;
 		background-color: #383e4c;
 		float:right;
-		border-radius:5px; 
+		border-radius:5px ; 
 	}	
 
 label~input{
@@ -232,7 +231,7 @@ input:checked~ul{
 
 
 .nav {
-		z-index: 5;
+		z-index: 5px;
 		position: fixed;
 		top:0px;
 		width:100%;
@@ -260,7 +259,7 @@ input:checked~ul{
 	width: 100%;
 	height:100%;
 	border-bottom: 1px solid #999999;
-	padding: 10 0 10 0;
+	padding: 10px 0px 10px 0px;
 }
 
 .nav>ul>li:last-child>a{
@@ -280,26 +279,26 @@ input:checked~ul{
 }
 
 .col_3{
-	margin: 0 15 30 15;
+	margin: 0px 15px 30px 15px;
 }
 
 .col_2{
-	margin: 0 15 30 15;
-	max-width: 555px;
+	margin: 0px 15px 30px 15px;
+	max-width: 555px ;
 }
 
 .col_4{
-	margin: 0 15 30 15;
+	margin: 0px 15px 30px 15px;
 	max-width: 260px;
 }
 
 .col_1{
-	margin: 0 15 30 15;
+	margin: 0px 15px 30px 15px;
 	max-width: 720px;
 }
 
 .col_1_medium{
-	margin: 0 15 30 15;
+	margin: 0px 15px 30px 15px;
 	max-width: 720px;
 	flex-basis: 100%;
 }
@@ -308,9 +307,9 @@ input:checked~ul{
 	justify-content: center;
 }
 
-.margin_top_30 > .col_2_s2{
+.margin_top_30px > .col_2_s2{
 	flex-basis: 100%;
-	margin:0 15 0 15;
+	margin:0px 15px 0px 15px;
 	width:100%;
 }
 
@@ -332,23 +331,23 @@ input:checked~ul{
 	margin:auto;
 	background-color: #f2f2f2;
 	text-align: center;
-	padding:0 0 40 0;
+	padding:0px 0px 40px 0px;
 }
 
 .content_holder_inner > h2 {
-	font-size:20;
+	font-size:20px;
 }
 
 .content_holder_inner > p {
-	margin:15 0 0 0;
-	padding:0 20 35 20;
+	margin:15px 0px 0px 0px;
+	padding:0px 20px 35px 20px;
 	font-size:14px;
 }
 
 .content_holder_inner > a {
-	font-size:20;
-	padding:10 30 10 30;
-	border-radius:5px;
+	font-size:20px;
+	padding:10px 30px 10px 30px;
+	border-radius:5px ;
 	border:black;
 }
 
@@ -394,15 +393,15 @@ input:checked~ul{
 }
 
 .margin_sides_15{
-	margin: 0 15px 0 15px;
+	margin: 0px 15px  0px 15px;
 }
 
-.padding_top_45 {
-	padding-top: 45px;
+.padding_top_45{
+	padding-top: 45px ;
 }
 
 footer > .material_holder_outer {
-	padding: 0;
+	padding: 0px;
 	background-color: #f2f2f2;
 }
 
@@ -418,23 +417,23 @@ footer > .material_holder_outer {
 	width:100%;
 }
 
-.parallax1>div>h1{
+h1{
 	font-size: 60px;
 	color:white;
 	text-align: center;
 	text-shadow:2px 2px black;
 	display: block;
-	font-weight: 500;
+	font-weight: 500px;
 	margin-bottom: 0px;
 }
 
 .parallax1>div>h4{
 	margin-top:0px;
-	font-size: 25px;
+	font-size: 25px ;
 	color:white;
 	text-align: center;
 	text-shadow:2px 2px black;
-	font-weight: 500;
+	font-weight: 500px;
 }
 
 
@@ -531,7 +530,7 @@ footer > .material_holder_outer {
 		padding:14px 23px 14px 23px;
 		border: 1px solid #646d7c;
 		color:white;
-		margin:0 6px 0 6px;
+		margin:0px 6px 0px 6px;
 		text-transform: capitalize;
 	}
 
@@ -553,13 +552,13 @@ footer > .material_holder_outer {
 	}
 
 	.col_2{
-		max-width: 345px;
+		max-width: 345px ;
 	}
 	.parallax3>div>div>p{
 		font-size: 18px;
 	}
 	.margin_top_30 > .col_2_s2{
-		max-width: 345px;	
+		max-width: 345px ;	
 	}
 }
 
@@ -567,18 +566,21 @@ footer > .material_holder_outer {
 
 @media (min-width: 992px){
 
+	h1{
+		font-size:90pt;
+	}
 
 	.nav>ul>li>a{
 		font-size:20px;
 		padding:11px 22px 12px 22px;
-		margin:0 10px 0 10px;
+		margin:0px 10px 0px 10px;
 		text-align: center;
 	}
 
 	.nav >ul>li{
 		list-style-type: none;
 		display:inline;
-		padding:10px 0 10px 0;
+		padding:10px 0px 10px 0px;
 		vertical-align: center;
 		line-height: 20px;
 	}
@@ -596,10 +598,10 @@ footer > .material_holder_outer {
 	}
 
 	.col_2{
-		max-width: 455px;
+		max-width: 455px ;
 	}
 	.col_4{
-		max-width: 212.5px;
+		max-width: 212.5px ;
 	}
 	.flex{
 		min-width: 0%
@@ -619,7 +621,7 @@ footer > .material_holder_outer {
 		width:360px;
 	}
 	.col_2{
-		max-width: 555px;
+		max-width: 555px ;
 	}
 	.col_4{
 		max-width: 260px;
